<resources>
    <string name="app_name">Deadly Dungeon of Death</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_confirm_password">Confirm Password</string>
    <string name="action_register">Register!</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="Button">Play</string>
    <string name="button">Resume Game</string>
    <string name="welcome_player">Welcome</string>
    <string name="choose_scoreboard">Choose your scoreboard!</string>
    <string name="new_game">New Game</string>
    <string name="exit">Log Out</string>
    <string name="register_link">Click Here to Register </string>
    <string name="login_link">Click Here to Log In </string>
    <string name="audio">Audio Choice</string>
    <string name="stats">Scoreboard</string>
    <string name="difficulty">Difficulty</string>
    <string name="variety">Sprite Variety</string>
    <string name="configurations">Select Your Settings!</string>
    <string name="play">Play Game</string>
    <string name="resources_collected">Resources Score</string>
    <string name="experience">Experience</string>
    <string name="total_time">Total time in seconds</string>
    <string name="level_over">Level Over!</string>
    <string name="next_level">Next Level</string>
    <string name="info">Information</string>
    <string name="scoreSavePrompt"> Save Your Score!</string>
    <string name="attackAction">Attack</string>
    <string name="consumables">Consumables</string>
    <string name="your_inventory">Your Inventory</string>
    <string name="gamble_30">Gatcha: 40 Gold</string>
    <string name="nameToSave"> Name to Save With</string>
    <string name="start_combat">Start Combat</string>
    <string name="shop">Shop</string>
    <string name="show_table">Show table</string>
    <string name="wear_equipments">Prepare for Combat</string>
    <string name="gamble_button_text">Gatcha!</string>
    <string name="overall">Overall Game</string>
    <string name="dungeonGame">Dungeon Game</string>
    <string name="shopGame">Shop Game</string>
    <string name="combatGame">Combat Game</string>
    <string name="combat_begin_text">Begin Battle!</string>


    <string-array name="sizeArray">
        <item>Rustic</item>
        <item>Rock</item>
        <item>Classic</item>
    </string-array>

    <string-array name="scoreboardArray">
        <item>Personal score</item>
        <item>Global scores</item>
        <item>Global scores sorted by seconds</item>
        <item>Global scores sorted by resources</item>
        <item>Global scores sorted by experience</item>
        <item>Global scores for Dungeon Level</item>
        <item>Global scores for Shop Level</item>
        <item>Global scores for Combat Level</item>
    </string-array>

    <string-array name="difficultyArray">
        <item>Easy</item>
        <item>Medium</item>
        <item>Hard</item>
    </string-array>

    <string-array name="varietyArray">
        <item>Classic</item>
        <item>Fancy</item>
        <item>Other</item>
    </string-array>
    <string name="title_activity_combat">CombatActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_scoreboard">ScoreboardActivity</string>
</resources>
