<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Docs.InformationActivity">

    <Button
        android:id="@+id/overallInfoButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="150dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="170dp"
        android:layout_marginBottom="99dp"
        android:onClick="display"
        android:text="@string/overall"
        app:layout_constraintBottom_toTopOf="@+id/dungeonInfoButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/dungeonInfoButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="150dp"
        android:layout_marginTop="99dp"
        android:layout_marginEnd="170dp"
        android:onClick="display"
        android:text="@string/dungeonGame"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/overallInfoButton" />

    <Button
        android:id="@+id/shopInfoButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="150dp"
        android:layout_marginTop="118dp"
        android:layout_marginEnd="170dp"
        android:onClick="display"
        android:text="@string/shopGame"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dungeonInfoButton" />

    <Button
        android:id="@+id/combatInfoButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="150dp"
        android:layout_marginTop="312dp"
        android:layout_marginEnd="173dp"
        android:layout_marginBottom="164dp"
        android:onClick="display"
        android:text="@string/combatGame"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/shopInfoButton" />
</androidx.constraintlayout.widget.ConstraintLayout>